--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-type-animation": "^3.2.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
