--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
+    "motion": "^12.19.1",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
